<resources>
    <string name="app_name">Gacha_Fit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="no_tienes_cuenta_reg_strate">¿No tienes cuenta? Regístrate</string>
    <string name="recordarme">Recordarme</string>
    <string name="email_rellenar">Email</string>
    <string name="contrasena_rellenar">Contraseña\n</string>
    <string name="contrasena_repetir">Repite la contraseña</string>
    <string name="BotonRegistro">Registrarse</string>
    <string name="hamster_running">Hamster corriendo</string>
    <string name="repetir_contrasena">Repetir contraseña</string>
    <string name="seleccionar">Seleccionar</string>
</resources>