<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo_electr_nico"
        android:textColorHint="@color/purple_500"
        android:textColor="@color/purple_500"
        android:inputType="textEmailAddress"
        android:drawableEnd="@android:drawable/ic_dialog_email"
        android:background="@drawable/edittext_bg"
        android:padding="12dp"
        android:layout_marginBottom="16dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            android:textColorHint="@color/purple_500"
            android:textColor="@color/purple_500"
            android:inputType="textPassword"
            android:background="@drawable/edittext_bg"
            android:padding="12dp"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:id="@+id/togglePasswordView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_visibility_off" />
    </RelativeLayout>

    <CheckBox
        android:id="@+id/recordar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordarme"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton"
        android:text="@string/iniciar_sesi_n"
        android:backgroundTint="@color/purple_500"
        android:textColor="@android:color/white" />
    <TextView
        android:id="@+id/registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_tienes_cuenta_reg_strate"
        android:textColor="@color/purple_500"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true" />
</LinearLayout>