<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/emailRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_bg"
        android:textColor="@color/purple_500"
        android:drawableEnd="@android:drawable/ic_dialog_email"
        android:hint="@string/correo_electr_nico"
        android:textColorHint="@color/purple_500"
        android:inputType="textEmailAddress"
        android:padding="12dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            android:textColorHint="@color/purple_500"
            android:inputType="textPassword"
            android:background="@drawable/edittext_bg"
            android:textColor="@color/purple_500"
            android:padding="12dp"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:id="@+id/togglePasswordView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_visibility_off" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordRepetir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repetir_contrasena"
            android:textColorHint="@color/purple_500"
            android:inputType="textPassword"
            android:background="@drawable/edittext_bg"
            android:textColor="@color/purple_500"
            android:padding="12dp"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:id="@+id/togglePasswordRepetir"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_visibility_off" />
    </RelativeLayout>

    <Button
        android:id="@+id/botonRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/boton"
        android:text="@string/BotonRegistro"
        android:textColor="@color/white" />

</LinearLayout>